--- a/_helpers.scss
+++ b/_helpers.scss
@@ -53,5 +53,5 @@
 
 .visually-hidden,
 .visually-hidden-focusable:not(:focus):not(:focus-within) {
-    @include visually-hidden();
+    @include mx.visually-hidden();
 }
