--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,8 +1,16 @@
 @charset "UTF-8";
 
 @use "sass:math";
+@use "sass:list";
+@use "sass:meta";
+@use "sass:string";
+@use "sass:color";
+@use "sass:map";
+@use "sass:selector";
+@use "functions" as fn;
 
-@import "bootstrap-required";
+@use "bootstrap-required";
+//@import "bootstrap-required";
 
 $rfs-unit: rem !default;
 $rfs-rem-value: 16 !default;
@@ -16,7 +24,7 @@ $_buttons-list: (
         "[type='submit']",
         ".button",
 );
-$all-buttons: join($_buttons-list, ', ');
+$all-buttons: list.join($_buttons-list, ', ');
 //$all-buttons: _assign-inputs($_buttons-list);
 //$all-buttons-active: _assign-inputs($_buttons-list, active);
 //$all-buttons-focus: _assign-inputs($_buttons-list, focus);
@@ -43,7 +51,7 @@ $_text-inputs-list: (
         "input:not([type])",
         "textarea",
 );
-$all-text-inputs: join($_text-inputs-list, ', ');
+$all-text-inputs: list.join($_text-inputs-list, ', ');
 //$all-text-inputs: _assign-inputs($_text-inputs-list);
 //$all-text-inputs-active: _assign-inputs($_text-inputs-list, active);
 //$all-text-inputs-focus: _assign-inputs($_text-inputs-list, focus);
@@ -122,7 +130,7 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 // Helper function to get the formatted non-responsive value
 @function nrfs-value($values) {
     // Convert to list
-    $values: if(type-of($values) != list, ($values,), $values);
+    $values: if(meta.type-of($values) != list, ($values,), $values);
 
     $val: "";
 
@@ -132,7 +140,7 @@ $all-text-inputs: join($_text-inputs-list, ', ');
             $val: $val + " 0";
         } @else {
             // Cache $value unit
-            $unit: if(type-of($value) == "number", unit($value), false);
+            $unit: if(meta.type-of($value) == "number", math.unit($value), false);
 
             @if $unit == px {
                 // Convert to rem if needed
@@ -148,7 +156,7 @@ $all-text-inputs: join($_text-inputs-list, ', ');
     }
 
     // Remove first space
-    @return unquote(str-slice($val, 2));
+    @return string.unquote(string.slice($val, 2));
 }
 
 @mixin font($size, $line-height: false, $weight: false, $style: false, $font-family: false) {
@@ -174,7 +182,7 @@ $all-text-inputs: join($_text-inputs-list, ', ');
         @include font-size($size);
     }
     @if $line-height {
-        line-height: rfs-value($line-height);
+        line-height: mx.nrfs-value($line-height);
     }
     @if $weight {
         font-weight: $weight;
@@ -262,7 +270,7 @@ $all-text-inputs: join($_text-inputs-list, ', ');
             } @else if $property == 'typography-mobile' {
                 @include generate-rfs-properties-from($typography-mobile, #{$property-value}, $important);
             } @else if $property == 'font-size' or $property == 'line-height' {
-                #{$property}: rfs-value($property-value) $_important;
+                #{$property}: mx.nrfs-value($property-value) $_important;
             } @else if ($property == 'padding') {
                 @include padding($property-value);
             } @else if ($property == 'padding-right') {
@@ -293,13 +301,13 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 }
 
 @mixin generate-properties-from($array, $key, $important: false) {
-    $properties: map-get($array, $key);
+    $properties: map.get($array, $key);
 
     @include generate-properties($properties, $important);
 }
 
 @mixin generate-rfs-properties-from($array, $key, $important: false) {
-    $properties: map-get($array, $key);
+    $properties: map.get($array, $key);
 
     @include generate-rfs-properties($properties, $important);
 }
@@ -314,13 +322,21 @@ $all-text-inputs: join($_text-inputs-list, ', ');
     $list: ();
 
     @each $input in $inputs {
-        $input: unquote($input);
+        $input: string.unquote($input);
         $input: if($pseudo, $input + ":" + $pseudo, $input);
-        $list: append($list, $input, comma);
+        $list: list.append($list, $input, comma);
     }
 
     @return join($list, ', ');
     //@return $list;
+}
+
+@mixin clearfix() {
+    &::after {
+        display: block;
+        clear: both;
+        content: "";
+    }
 }
 
 //********** Truncates text and adds an ellipsis to represent overflow.
@@ -358,23 +374,23 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 //    $values: $values;
 //
 //    @if _contains-falsy($values) {
-//        @if nth($values, 1) { #{$top}: nth($values, 1); }
+//        @if list.nth($values, 1) { #{$top}: list.nth($values, 1); }
 //
 //        @if length($values) == 1 {
-//            @if nth($values, 1) { #{$right}: nth($values, 1); }
+//            @if list.nth($values, 1) { #{$right}: list.nth($values, 1); }
 //        } @else {
-//            @if nth($values, 2) { #{$right}: nth($values, 2); }
+//            @if list.nth($values, 2) { #{$right}: list.nth($values, 2); }
 //        }
 //
 //        @if length($values) == 2 {
-//            @if nth($values, 1) { #{$bottom}: nth($values, 1); }
-//            @if nth($values, 2) { #{$left}: nth($values, 2); }
+//            @if list.nth($values, 1) { #{$bottom}: list.nth($values, 1); }
+//            @if list.nth($values, 2) { #{$left}: list.nth($values, 2); }
 //        } @else if length($values) == 3 {
-//            @if nth($values, 3) { #{$bottom}: nth($values, 3); }
-//            @if nth($values, 2) { #{$left}: nth($values, 2); }
+//            @if list.nth($values, 3) { #{$bottom}: list.nth($values, 3); }
+//            @if list.nth($values, 2) { #{$left}: list.nth($values, 2); }
 //        } @else if length($values) == 4 {
-//            @if nth($values, 3) { #{$bottom}: nth($values, 3); }
-//            @if nth($values, 4) { #{$left}: nth($values, 4); }
+//            @if list.nth($values, 3) { #{$bottom}: list.nth($values, 3); }
+//            @if list.nth($values, 4) { #{$left}: list.nth($values, 4); }
 //        }
 //    } @else {
 //        #{$all}: $values;
@@ -409,6 +425,14 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 //^^^
 // Usage: @include prefix('box-sizing', 'border-box', moz webkit);
 //^^^
+
+@mixin make-container($gutter-x) {
+    width: 100%;
+    padding-right: calc($gutter-x * .5);
+    padding-left: calc($gutter-x * .5);
+    margin-right: auto;
+    margin-left: auto;
+}
 
 
 //********** sticky/absolute/fixed block.
@@ -558,6 +582,21 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 // Usage: @include vertical_align;
 //^^^
 
+@mixin visually-hidden() {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important; // Fix for https://github.com/twbs/bootstrap/issues/25686
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+
+    // Fix for positioned table caption that could become anonymous cells
+    &:not(caption) {
+        position: absolute !important;
+    }
+}
 
 //********** Overlay background mixin
 
@@ -605,6 +644,30 @@ $all-text-inputs: join($_text-inputs-list, ', ');
         content: '';
         position: relative;
         z-index: 1;
+    }
+}
+
+@mixin transition($transition...) {
+    @if list.length($transition) == 0 {
+        $transition: all .2s ease-in-out;
+    }
+
+    @if list.length($transition) > 1 {
+        @each $value in $transition {
+            @if $value == null or $value == none {
+                @warn "The keyword 'none' or 'null' must be used as a single argument.";
+            }
+        }
+    }
+
+    @if list.nth($transition, 1) != null {
+        transition: $transition;
+    }
+
+    @if list.nth($transition, 1) != null and list.nth($transition, 1) != none {
+        @media (prefers-reduced-motion: reduce) {
+            transition: none;
+        }
     }
 }
 
@@ -659,20 +722,6 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 }
 
 // =============================================================================
-// String Replace
-// =============================================================================
-
-@function str-replace($string, $search, $replace: "") {
-    $index: str-index($string, $search);
-
-    @if $index {
-        @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
-    }
-
-    @return $string;
-}
-
-// =============================================================================
 // Font Face
 // =============================================================================
 
@@ -681,7 +730,7 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 
     $extmods: (
             eot: "?",
-            svg: "#" + str-replace($name, " ", "_")
+            svg: "#" + fn.str-replace($name, " ", "_")
     );
 
     $formats: (
@@ -690,13 +739,14 @@ $all-text-inputs: join($_text-inputs-list, ', ');
     );
 
     @each $ext in $exts {
-        $extmod: if(map-has-key($extmods, $ext), $ext + map-get($extmods, $ext), $ext);
-        $format: if(map-has-key($formats, $ext), map-get($formats, $ext), $ext);
-        $src: append($src, url(quote($path + "." + $extmod)) format(quote($format)), comma);
+        $extmod: if(map.has-key($extmods, $ext), $ext + map.get($extmods, $ext), $ext);
+        $format: if(map.has-key($formats, $ext), map.get($formats, $ext), $ext);
+        $file: string.quote($path + "." + $extmod);
+        $src: list.append($src, url($file) format(string.quote($format)), comma);
     }
 
     @font-face {
-        font-family: quote($name);
+        font-family: string.quote($name);
         font-style: $style;
         font-weight: $weight;
         font-display: $display;
@@ -755,5 +805,5 @@ $all-text-inputs: join($_text-inputs-list, ', ');
 }
 
 @function sub-map-get($map, $key1, $key2) {
-    @return map-get(map-get($map, $key1), $key2);
+    @return map.get(map-get($map, $key1), $key2);
 }
